--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
             font-size: 15px;
         }
         .btn {
-            display: block;
+            display: flex; 
+            justify-content: center; 
+            align-items: center;
+       
+
             width: 100%;
             padding: 14px;
             margin: 10px 0;
@@ -52,9 +56,6 @@
             border-radius: 10px;
             font-size: 17px;
             transition: 0.25s;
-            /* --- MODIFICA AGGIUNTA PER CENTRARE IL TESTO --- */
-            text-align: center;
-            /* ----------------------------------------------- */
         }
         .btn:hover {
             background: #3451a1;
